--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 	    <li>Support multi-instances of audio media player with functions: Play, Pause, Resume, Stop and Seek</li>
       <li>Support unread message badges in contact and chatRoom list views</li>
       <li>User selectable option for heads-up notification and quite hours</li>
+      <li>Support Text to Speech and speech recognition UI with enable option per chat session (contact and group chat)</li>
       <li>Share of social media links are tagged with thumbnail and title</li>
       <li>XEP-0012: Last Activity time associated with contacts</li>
       <li>XEP-0048: Bookmarks for conference room and autoJoin on login</li>			  
